# sqlmongo

./: .editorconfig  .gitignore  CHANGELOG.md  README.md  env_example  pyproject.toml  run_backend.py  run_frontend.py
config/: semantic_layer.yaml
data/: mongodb_analysis.json  semantic_alias_rules.json  semantic_alias_rules_history.json  semantic_entries.json  semantic_layer_metadata.json
data/chroma_entity_resolver/: chroma.sqlite3
docs/: hybrid_device_resolution_regression.md  query_routing_tiers.md  system_flow_report.html
scripts/: analyze_mongodb.py  benchmark_semantic_search.py  build_semantic_layer.py  build_vector_index.py
src/: __init__.py  chat_memory_service.py  config.py  exceptions.py  main.py  memory_rewrite.py  user_memory_store.py  version_info.py
src/agent/: __init__.py  (+10 more)
tests/: test_action_override_policy.py  test_api_endpoints.py  test_cache_manager.py  test_chart_planner_mvp.py  test_chat_memory_service.py  test_chat_stream_alias_loop_regression.py  test_chat_stream_api.py  test_chat_stream_memory_suggestion_regression.py  test_dag_clarification_regression.py  test_dag_query_plan.py  test_entity_resolver.py  test_focused_response.py  test_memory_rewrite.py  test_metadata_engine_project_search.py  test_non_dag_query_plan_context.py  test_orchestrator_query_scope.py  test_orchestrator_query_state_bridge.py  test_query_entities.py  test_query_planner.py  test_scope_reset_commands.py  test_synthesizer_focused.py  test_time_range_resolution.py  test_user_memory_store.py
web/: app.py  changelog.html  index.html  semantic_mapping_admin.html
(+73 files in other folders)
